--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,29 @@
-# 依赖包 (绝对不能上传)
-node_modules/
-
-# 操作系统生成的垃圾文件
-.DS_Store
-Thumbs.db
-
-# 环境变量 (包含敏感信息，不应上传)
-.env
-.env.local
-
-# 常用前端框架的打包/构建目录
-dist/
-build/
-out/
-.nuxt/
-.next/
-
-# 编辑器配置 (可选)
-.vscode/
-.idea/
-
-# 日志文件
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+lerna-debug.log*
+
+# Node modules
+node_modules
+dist
+dist-electron
+release
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs
+*.njsproj
+*.sln
+*.sw?
+
+# OS generated files
+Thumbs.db
